# bamtools

./: CMakeLists.txt  Notes.kz  README
docs/: Doxyfile
src/: CMakeLists.txt
src/api/: BamAlignment.cpp  BamAlignment.h  BamAux.cpp  BamAux.h  BamConstants.h  BamIndex.h  BamMultiReader.cpp  BamMultiReader.h  BamReader.cpp  BamReader.h  BamWriter.cpp  BamWriter.h  CMakeLists.txt  SamHeader.cpp  SamHeader.h  SamProgramChain.cpp  SamProgramChain.h  SamReadGroupDictionary.cpp  SamReadGroupDictionary.h  SamSequence.h  SamSequenceDictionary.cpp  SamSequenceDictionary.h
src/api/algorithms/: Sort.h
src/api/internal/: CMakeLists.txt
src/api/internal/bam/: BamHeader_p.cpp  BamHeader_p.h  BamMultiMerger_p.h  BamMultiReader_p.cpp  BamRandomAccessController_p.cpp  BamReader_p.cpp  BamReader_p.h  BamWriter_p.cpp  BamWriter_p.h  CMakeLists.txt
src/api/internal/index/: BamIndexFactory_p.cpp  BamIndexFactory_p.h  BamStandardIndex_p.cpp  BamStandardIndex_p.h  BamToolsIndex_p.cpp  BamToolsIndex_p.h
src/api/internal/io/: BgzfStream_p.cpp  BgzfStream_p.h  CMakeLists.txt  HostAddress_p.cpp  HostAddress_p.h  HostInfo_p.cpp  HostInfo_p.h
src/api/internal/utils/: BamException_p.h
src/test/: CMakeLists.txt  testbamalignment.cpp
src/toolkit/: CMakeLists.txt  bamtools.cpp  bamtools_convert.cpp  bamtools_count.cpp  bamtools_filter.cpp  bamtools_merge.cpp  bamtools_resolve.cpp  bamtools_sort.cpp  bamtools_split.cpp  bamtools_version.h
src/utils/: bamtools_fasta.cpp  bamtools_pileup_engine.cpp  bamtools_utilities.cpp  bamtools_utilities.h
tests/: CMakeLists.txt  README  test_cut.cpp  test_example.cpp  test_valid.cpp
